# commit-email

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: style.toml
src/: config.rs  main.rs  repo.rs  repo_error.rs  scp.rs
