[package]
name = "commit-email"
version = "0.2.1"
authors = ["Marvin König <dev@mkqavi.com>"]
license = "MIT"
description = "A tool that reminds you to commit with the correct email address"
repository = "https://github.com/mkqavi/commit-email"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
cursive = { version = "0.20.0", features = [
    "crossterm-backend",
    "toml",
], default-features = false }
url = { version = "2.5.2", features = ["serde"] }
anyhow = "1.0.86"
regex = "1.10.5"
