[package]
name = "commit-email"
version = "0.2.1"
authors = ["Marvin König <dev@mkqavi.com>"]
license = "MIT"
description = "A tool that reminds you to commit with the correct email address"
repository = "https://github.com/mkqavi/commit-email"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.20.4"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.19"
cursive = { version = "0.21.1", features = [
    "crossterm-backend",
    "toml",
], default-features = false }
url = { version = "2.5.8", features = ["serde"] }
anyhow = "1.0.102"
regex = "1.11.1"
